--- a/style.css
+++ b/style.css
@@ -1,5 +1,17 @@
-.buttons-grid {
-    display: flex;
-    align-items: flex-start;
+body {
+    background-color: rgb(47, 47, 47);
+}
 
+.buttons-grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 10px;
+}
+
+.calculator {
+    width: 400px;
+    border: 15px #333 solid;
+    border-radius: 15px;
+    padding: 20px;
+    background-color: rgb(0, 0, 156);
 }
