--- a/style.css
+++ b/style.css
@@ -8,6 +8,29 @@ body {
     grid-gap: 10px;
 }
 
+.screen {
+    padding: 20px;
+    border: 2px #333;
+    border-radius: 5px;
+    margin-bottom: 20px;
+    text-align: right;
+    background-color: #eee;
+}
+
+.top-row {
+    display: grid;
+    margin-bottom: 10px;
+}
+
+.btn {
+    width: auto;
+    height: 50px;
+}
+
+.clear {
+    height: 50px;
+}
+
 .calculator {
     width: 400px;
     border: 15px #333 solid;
